# insurance_service

./: .gitignore  README.md
backend/: .dockerignore  Dockerfile  entrypoint.sh  migrate.sh  pyproject.toml  seed.sh
backend/alembic/: env.py
backend/alembic/versions/: a27d7c4a3915_new_models_rate_cargo.py
backend/app/: main.py  rates_data.json  seed.py
backend/app/api/: __init__.py
backend/app/api/endpoints/: cargo.py  insurance.py  rate.py
backend/app/core/: config.py  database.py
backend/app/crud/: cargo.py  rate.py
backend/app/models/: rate.py
backend/app/schemas/: cargo.py  insurance.py  rate.py
backend/app/services/: kafka_producer.py
docker/develop/: docker-compose.yml
frontend/: .dockerignore  Dockerfile  entrypoint.sh
frontend/src/: App.tsx  main.tsx  vite-env.d.ts
frontend/src/hooks/cargoHooks/: useCargoList.ts
frontend/src/hooks/insuranceHooks/: useCalculateINsurance.ts
frontend/src/hooks/rateHooks/: useRateList.ts
frontend/src/services/apiClient/: apiClient.ts
frontend/src/services/cargo/: fetchCargoList.ts
frontend/src/services/insurance/: fetchCalculateINsurance.ts
frontend/src/services/rate/: fetchRateList.ts
frontend/src/theme/: theme.ts
